# Othello_Torch

./: CMakeLists.txt  Game.cpp  Game.h  MCTS.cpp  MCTS.h  Othello.cpp  TreeNode.cpp  TreeNode.h  mcts.h  requirements.txt  settings.h
